2003-06-11  Alexander Larsson  <alexl@redhat.com>

	* gnome-vfs.keys.in:
	Add EOG collection to short list

	* gnome-vfs.mime:
	Add .lo to object file extensions

2003-06-11  Jon Svendsen  <jon-sven@frisurf.no>

	* gnome-vfs.applications: Add startup_notify=true for applications
	with stable releases supporting freedesktop.org startup notification

2003-06-05  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* configure.in: Added "is" into ALL_LINGUAS

2003-06-03  Seth Nickell  <snickell@stanford.edu>

	* check-mime.pl:
	* gnome-vfs.applications:

	Update to use the "use_gnomevfs" flag, which should
	be set on any applications that support GnomeVFS so
	Nautilus et al will know that they support "all" URIs.

2003-06-02  Seth Nickell  <snickell@stanford.edu>

	* AUTHORS:

	Make Bastien do the work.
	
2003-05-26  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* configure.in: Added 'li' to ALL_LINGUAS

2003-05-25  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: s/wmx/wvx/ (I think I'm dyslexic)

2003-05-25  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: added a name nice for "video/x-ms-wmx" files

2003-05-23  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: add the application/x-smb-printer mime-type
	for the new SMB method

2003-05-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: remove false positives detection with help
	from Justin Frankel from Nullsoft

2003-05-20  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: it's video/x-nsv, not video/x-nsf

2003-05-20  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: added video/x-nsf mime-type from Nullsoft, fixed
	placement of the samba share directory

2003-05-19  Christian Neumair  <chris@gnome-de.org>

	* gnome-vfs.keys.in: Reduced number of translatable strings by 1 by
	assimilating two similar strings.
