@@ -2,6 +2,7 @@ ABOUT-NLS
 Makefile
 Makefile.in
 aclocal.m4
+autom4te.cache
 confdefs.h
 config.cache
 config.guess
