@@ -89,6 +89,7 @@ print "Reading gnome-vfs.keys.in.\n";
    "short_list_component_iids_for_advanced_user_level",
    "short_list_component_iids_for_intermediate_user_level",
    "short_list_component_iids_for_novice_user_level",
+   "startup_notify",
    "use_category_default",
    "vfs_method",
   );
