@@ -264,6 +264,9 @@ application/x-lha
 application/x-lhz
 	ext: lhz
 
+application/x-magicpoint
+	ext: mgp
+
 application/x-mif
 	ext: mif
 
